--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.14.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "elasticsearch": "^16.7.3",
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
