--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "elasticsearch": "^16.7.3",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
