id on post audio method

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.14.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
