fixed streaming on undefined bitrate, cookies added, and jwt and cookies expires added

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@prisma/client": "^5.15.0",
+    "@types/cookie-parser": "^1.4.7",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "elasticsearch": "^16.7.3",
     "express": "^4.19.2",
