--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "prisma": "^5.15.0",
+    "redis": "^4.6.14",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
