--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://root:root@localhost:5432/stream4you?schema=public"
-# DATABASE_URL=postgresql://docker:docker@localhost:5432/stream4you
+DATABASE_URL=postgresql://docker:docker@localhost:5432/stream4you
 
 SECRET=""
 ES_CLIENT='http://localhost:9200'
