--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@
 # DATABASE_URL=postgresql://docker:docker@localhost:5432/stream4you
 
 SECRET=""
-ES_CLIENT='http://localhost:9200'
+ES_CLIENT='http://host.docker.internal:9200'
